# watcher

./: .env.example  .gitignore  AI_CONSUMER_FLOW.md  COPILOT.md  FOUNDATION_COMPLETE.md  IMPLEMENTATION_AI_CONSUMER.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  Makefile  PHASE4_COMPLETE.md  PHASE4_FINAL_SUMMARY.md  PHASE4_TEST_SOLUTION.md  PROJECT_PLAN.md  QUICK_REFERENCE.md  README.md  TEST_COVERAGE_SUMMARY.md  TEST_INFRASTRUCTURE_COMPLETE.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: Dockerfile  alembic.ini  create_test_user.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 5e28f0bda1d5_add_news_models.py  68edc75c762b_add_unique_constraint_to_source_field.py  7770efb3ff2d_initial_migration.py  ce6450c4f79e_add_news_item_news_task_table_and_.py
backend/app/: crud.py  main.py
backend/app/ai/: README.md  __init__.py  base.py  consumer.py  gemini_client.py  integration_example.py  nova_client.py
backend/app/api/: __init__.py  auth.py  news_items.py  news_tasks.py  newspapers.py  source_news_tasks.py  sources.py
backend/app/core/: auth.py  config.py  users.py
backend/app/db/: __init__.py  database.py
backend/app/delivery/: web.py
backend/app/models/: __init__.py  (+7 more)
backend/tests/: README.md  conftest.py  test_ai_consumer.py  test_api_auth.py  test_api_news_items.py  test_api_news_tasks.py  test_api_source_news_tasks.py  test_api_sources.py  test_gemini_client.py  test_models.py  test_nova_client.py  test_rss_producer.py  test_rss_validator.py  test_telegram_producer.py  test_telegram_validator.py
(+63 files in other folders)
